# traffic-light-costume

./: CMakeLists.txt  Makefile  platformio.ini
data/: walk_10_19.txt
lib/RMCParser/: RMCParser.cpp  RMCParser.h
lib/TrafficLightLogic/: TrafficLightLogic.cpp  TrafficLightLogic.h
misc_code/: esp32_dev.cpp  uno_too_slow.cpp
python/: analysis.ipynb  requirements.txt  sim.py  test_notebook.ipynb
src/: main.cpp
tests/: rmc_test.cpp
